[package]
name = "hm_driver_rs"
version = "0.1.0"
edition = "2024"
publish = false
description = "基于 HDC 和 UITest 的原生 Rust HarmonyOS UI 自动化驱动"
license = "MIT AND LicenseRef-HarmonyOS-UITest-Agent-Unknown"

[features]
default = ["blocking", "embedded-agents"]
blocking = []
embedded-agents = ["dep:directories"]

[dependencies]
directories = { version = "6", optional = true }
regex = "1"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sxd-document = "0.3"
sxd-xpath = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
